[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/structures/structure_driftwood.png" type="Texture" id=1]
[ext_resource path="res://src/Structure_Driftwood.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ui/hint_interact.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 56.0

[node name="Driftwood" type="StaticBody2D" groups=["structure"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
shape = SubResource( 1 )

[node name="SpriteKey" type="Sprite" parent="."]
visible = false
position = Vector2( 24, -8 )
z_index = 3
texture = ExtResource( 3 )

[node name="PlayerCollisionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionRange"]
position = Vector2( 24, 24 )
shape = SubResource( 2 )

[connection signal="area_entered" from="PlayerCollisionRange" to="." method="_on_PlayerCollisionRange_area_entered"]
[connection signal="area_exited" from="PlayerCollisionRange" to="." method="_on_PlayerCollisionRange_area_exited"]
